<resources>
    <string name="app_name">Kamui - Food Donation app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="restaurant_signup">Join Us</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="contact_person">Manager Name</string>
    <string name="phone_number">1234567890</string>
    <string name="email">abc@example.com</string>
    <string name="password">password</string>
    <string name="signup_button">join us</string>
    <string name="restaurant_title">Make a Difference</string>
    <string name="signin_button">Sign In</string>
    <string name="restaurant_signin">Welcome Back</string>
    <string name="open">op</string>
    <string name="close">cs</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="full_name_hint">enter your Name</string>
    <string name="email_hint">enter your email</string>
    <string name="password_hint">enter your password</string>
    <string name="restaurant_name_hint">enter your restaurant name</string>
    <string name="restaurant_address_hint">enter your address</string>
    <string name="phone_hint">enter your phone no</string>
    <string name="receiver_address_hint">enter your address</string>
    <string name="receiver_phone_hint">enter your phone no</string>
    <string name="confirm_password_hint">reenter your password</string>
    <string name="food_donation_type">Food Donation Type</string>
    <string name="target_community">Target Audience</string>
    <string name="organization_type">Organization Type</string>
    <string name="food_type_prompt">Food Type</string>
    <string name="cuisine_prompt">Cuisine</string>
    <string name="select_access_level">Access Level</string>
    <string name="ngo_name_hint">Enter your ngo name</string>
    <string name="ngo_organization_type">Organization Type</string>
    <string name="ngo_target_community">Target Community</string>
    <string name="ngo_Donation_type">Donation Type</string>
    <string name="ngo_pickup_time">Pickup Time</string>
    <string name="Cuisine">Cuisines</string>
    <string name="food_type">Food Type</string>
    <string name="please_wait">Please Wait!</string>
    <string name="please_click_back_again_to_exit">click again to exit</string>
    <string name="default_notification_channel_id">0618</string>
    <string name="default_notification_channel_name">com.kamui.fooddonation</string>
    <string name="do_you_have_leftover_food">Do you have leftover food?</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="proceed_to_pickup">Proceed to pickup</string>
    <string name="no_donations_available">No donations available</string>
    <string name="approve_all">Approve All</string>
    <string name="emp_image">Emp_Image</string>
    <string name="ngo_nearby">Ngo nearby</string>
    <string name="no_ngo_available">No ngo available</string>
    <string name="who_would_you_like_to_feed">WHO WOULD YOU LIKE TO FEED</string>
    <string name="recent_donation">Recent Donation</string>
    <string name="donate_now">Donate Now</string>
    <string name="claim">Claim</string>
    <string name="track">Track</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="claimed_donations">Claimed Donations</string>
    <string name="edit">Edit</string>
    <string name="your_rewards_points">Your Rewards Points:</string>
    <string name="rewards_distribution">Rewards Distribution</string>
    <string name="receiver">Receiver</string>
    <string name="_5_points_for_every_donation_claimed">5 points for every donation claimed</string>
    <string name="restaurant">Restaurant</string>
    <string name="_10_points_for_every_donation_made">10 points for every donation made</string>
    <string name="volunteer">Volunteer</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="add_image">Add Image</string>
    <string name="employee_name">Employee Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="submit">Submit</string>
    <string name="approve_donation">Approve Donation</string>
    <string name="restaurants_have_joined_us">Restaurants have joined us</string>
    <string name="ngo">Ngo</string>
    <string name="ngo_s_have_joined_us">NGO\'s have joined us</string>
    <string name="manage_profile">manage profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="email_id">Email ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="banner">banner</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="or">or</string>
    <string name="create_account">create account</string>
    <string name="admin">Admin</string>
    <string name="food_name">Food Name</string>
    <string name="quantity">Quantity</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="upload">Upload</string>
    <string name="designation">Designation</string>
    <string name="full_access">Full Access</string>
    <string name="restricted_access">Restricted Access</string>
    <string name="chinese">Chinese</string>
    <string name="italian">Italian</string>
    <string name="mexican">Mexican</string>
    <string name="indian">Indian</string>
    <string name="japanese">Japanese</string>
    <string name="track_donations">Track Donations</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="perishable">Perishable</string>
    <string name="non_perishable">Non-Perishable</string>
    <string name="cooked_meals">Cooked meals</string>
    <string name="leftover_food">Leftover food</string>
    <string name="bakery_items">Bakery items</string>
    <string name="anytime">Anytime</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="non_profit">Non Profit</string>
    <string name="community">Community</string>
    <string name="faith_based">Faith-based</string>
    <string name="government">Government</string>
    <string name="international">International</string>
    <string name="food_pickup">Food Pickup</string>
    <string name="ngo_s_tax_id_or_registration_number">NGO\'s tax ID or registration number</string>
    <string name="availability">Availability</string>
    <string name="weekdays_monday_friday">Weekdays (Monday-Friday)</string>
    <string name="weekends_saturday_sunday">Weekends (Saturday-Sunday)</string>
    <string name="evenings_5pm_8pm">Evenings (5pm-8pm)</string>
    <string name="mornings_9am_12pm">Mornings (9am-12pm)</string>
    <string name="afternoons_1pm_4pm">Afternoons (1pm-4pm)</string>
    <string name="flexible">Flexible</string>
    <string name="preferred_type_of_volunteering_opportunity">Preferred Type of Volunteering Opportunity</string>
    <string name="event_setup_and_cleanup">Event setup and cleanup</string>
    <string name="food_preparation_and_cooking">Food preparation and cooking</string>
    <string name="serving_food_and_drinks">Serving food and drinks</string>
    <string name="donation_sorting_and_packaging">Donation sorting and packaging</string>
    <string name="fundraising_and_outreach">Fundraising and outreach</string>
    <string name="driving_and_transportation">Driving and transportation</string>

    <string-array name="dropdown_options">
        <item>Option 1</item>
        <item>Option 2</item>
        <item>Option 3</item>
    </string-array>
</resources>