<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/mobile_login_bro"
        android:contentDescription="@string/app_name"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/olive_700"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_firstText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_signup"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/tv_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_title"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/et_restaurant_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                android:autofillHints="" />

            <EditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:autofillHints="" />

            <EditText
                android:id="@+id/et_contact_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:inputType="text"
                android:autofillHints="" />
            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="" />
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginVertical="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/signup_button"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="@color/yellow_200"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>