
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ngo_nearby"
        android:layout_margin="15dp"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <!-- RecyclerView to display the list of donations -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_ngo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="16dp"
        android:clipToPadding="false" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/no_ngo_available" />

    <TextView
        android:id="@+id/tv_firstText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/who_would_you_like_to_feed"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerInside"
        android:src="@drawable/res_home_page"
        android:contentDescription="@string/add_image" />

    <TextView
        android:id="@+id/tv_secondText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recent_donation"
        android:layout_margin="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <!-- RecyclerView to display the list of donations -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_donations"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:clipToPadding="false" />

        <!-- Your content here -->
        <Button
            android:id="@+id/donate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_now"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center"/>



</LinearLayout>
