<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Image View -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/mobile_login_bro"
        android:contentDescription="@string/banner" />


        <!-- Linear Layout -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <!-- Button 1 -->
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/i_have_an_account"
                android:textSize="20sp"
                android:background="@drawable/button_shape"
                android:textStyle="bold"/>

            <!-- Or TextView -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <!-- Button 2 -->
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp"
                android:padding="10dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/create_account"
                android:textSize="20sp"
                android:background="@drawable/button_shape"
                android:textStyle="bold"/>

        </LinearLayout>


</LinearLayout>
