<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="10dp"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/mercy_04"
            android:contentDescription="@string/emp_image" />


        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text=""/>

        <TextView
            android:id="@+id/contact_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text=""/>

        <TextView
            android:id="@+id/role_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text=""/>

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/edit"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondaryVariant" />

        <TextView
            android:id="@+id/rewards_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_rewards_points"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondaryVariant" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rewards_distribution"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorSecondary"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:background="@color/colorSecondaryVariant"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="6dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_rewards"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/emp_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_points_for_every_donation_claimed"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondaryVariant"
            android:layout_marginTop="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="6dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_rewards"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/emp_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_points_for_every_donation_made"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondaryVariant"
            android:layout_marginTop="6dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volunteer"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="6dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_rewards"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/add_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_points_for_every_donation_claimed"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_rewards"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/add_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_points_for_every_donation_claimed"
                android:textColor="@color/blue"
                android:layout_gravity="center"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:paddingHorizontal="25dp"
        android:gravity="center">

        <Button
            android:id="@+id/notification_settings_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:text="@string/notification_settings"/>

        <Button
            android:id="@+id/delete_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textSize="25sp"
            android:backgroundTint="@color/red_200"/>

        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textSize="25sp"
            android:text="@string/logout"/>
    </LinearLayout>

</LinearLayout>
